--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -45,10 +45,26 @@
             <img src="/assets/images/icons/Equipe.png" class="mr-2" style="width: 20px; color: white;">
             <i class="fa fa-app-store"></i>Equipes</a> 
         </li> 
+        <li class="nav-item">
+          <a routerLinkActive="active" class="nav-link" [routerLink]="['/ranking']">
+            <img src="/assets/images/icons/rankinggeral.png" class="mr-2" style="width: 20px; color: white;">
+            <i class="fa fa-app-store"></i>Ranking</a> 
+        </li> 
+        <li class="nav-item">
+          <a routerLinkActive="active" class="nav-link" [routerLink]="['/importacaoptscomp']">
+            <img src="/assets/images/icons/ptscompeticaojogador.png" class="mr-2" style="width: 20px; color: white;">
+            <i class="fa fa-app-store"></i>Ranking</a> 
+        </li> 
+        <li class="nav-item">
+          <a routerLinkActive="active" class="nav-link" [routerLink]="['/dashboard']">
+            <img src="/assets/images/icons/dashboard.png" class="mr-2" style="width: 20px; color: white;">
+            <i class="fa fa-app-store"></i>Dashboard</a> 
+        </li> 
 
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/exemplosPipes']">
-          <i class="fa fa-app-store"></i> pipes</a>
+          <a routerLinkActive="active" class="nav-link" [routerLink]="['/jogos']">
+            <img src="/assets/images/icons/jogo1.png" class="mr-2" style="width: 20px; color: white;">
+            <i class="fa fa-app-store"></i>Jogos</a> 
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/exemplosPipes']">
