--- a/src/app/jogos/jogos-list/jogos-list.component.html
+++ b/src/app/jogos/jogos-list/jogos-list.component.html
@@ -52,9 +52,9 @@
                 <table class="table table-striped col-sm-12 col-xs-12">
                     <thead>
                     <tr>
-                        <th scope="col" sortable="JG_JGDATA" (sort)="onSort($event)">Nome Jog.</th>
-                        <th scope="col" sortable="OBJ_JOGADOR1.JO_JOAPLEIDO" (sort)="onSort($event)">jogador</th>
-                        <th scope="col" sortable="OBJ_JOGADOR2.JO_JOAPLEIDO" (sort)="onSort($event)">jogador</th>
+                        <th scope="col" sortable="OBJ_COMPETICAO.CP_CPDESCRICAO" (sort)="onSort($event)">Competição</th>
+                        <th scope="col" sortable="OBJ_CLUBE1.CL_CLSIGLA" (sort)="onSort($event)">Clube</th>
+                        <th scope="col" sortable="OBJ_CLUBE2.CL_CLSIGLA" (sort)="onSort($event)">Clube</th>
                         <th scope="col">Ação</th>
 
                     </tr>
@@ -62,20 +62,27 @@
                     <tbody>
                     <tr *ngFor="let jogo of jogos$ | async">
                         <td>
-                            <img [src]="jogo.JO_JOFOTO" class="mr-2" style="width: 30px">
-                            <span [tooltip]="jogo.JO_JONOME" placement="top" show-delay="500">
-                            <ngb-highlight [result]="jogo.JO_JONOME.substring(0,15)" [term]="service.searchTerm"></ngb-highlight>
+                            <span [tooltip]="jogo.OBJ_COMPETICAO.CP_CPDESCRICAO" placement="top" show-delay="500">
+                                <ngb-highlight [result]="jogo.OBJ_COMPETICAO.CP_CPDESCRICAO.substring(0,15)" [term]="service.searchTerm"></ngb-highlight>
                             </span>
                         </td>
                         <td>
-                            <span [tooltip]="jogo.JO_JOAPELIDO" placement="top" show-delay="500">
-                            <ngb-highlight [result]="jogo.JO_JOAPELIDO.substring(0,15) " [term]="service.searchTerm"></ngb-highlight>
+                            <img [src]="jogo.OBJ_CLUBE1.CL_CLEMBLEMA" class="mr-2" style="width: 30px">
+                            <span [tooltip]="jogo.OBJ_CLUBE1.CL_CLSIGLA" placement="top" show-delay="500">
+                            <ngb-highlight [result]="jogo.OBJ_CLUBE1.CL_CLNOME.substring(0,15)" [term]="service.searchTerm"></ngb-highlight>
                             </span>
                         </td>
                         <td>
-                            <span [tooltip]="jogo.OBJ_CLUBE.CL_CLNOME" placement="top" show-delay="500">
-                            <img [src]="jogo.OBJ_CLUBE.CL_CLEMBLEMA" class="mr-2" style="width: 30px">
+                            <img [src]="jogo.OBJ_CLUBE2.CL_CLEMBLEMA" class="mr-2" style="width: 30px">
+                            <span [tooltip]="jogo.OBJ_CLUBE2.CL_CLSIGLA" placement="top" show-delay="500">
+                            <ngb-highlight [result]="jogo.OBJ_CLUBE2.CL_CLNOME.substring(0,15)" [term]="service.searchTerm"></ngb-highlight>
                             </span>
+                        </td>
+                        <td>
+                            <span [tooltip]="jogo.OBJ_COMPETICAO.CP_CPDESCRICAO" placement="top" show-delay="500">
+                            <img [src]="jogo.OBJ_COMPETICAO.CP_CPFOTO" class="mr-2" style="width: 30px">
+                            </span>
+                            {{jogo.OBJ_COMPETICAO.CP_CPDESCRICAO.substr(0,15)}}
                         </td>
                         <td>
                             <a class="nav-link" [routerLink]="['/jogo',jogo.JO_JOID]">
